--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,46 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@keyframes fade-out {
+  0% {
+    opacity: 100%
+  }
+  50% {
+    opacity: 50%
+  }
+  99% {
+    opacity: 0%
+  }
+  100% {
+    opacity: 0%;
+    display: none;
+  }
+}
+
+.fade-out {
+  animation: fade-out 1s linear forwards;
+}
+
+
+@keyframes fade-in {
+  0% {
+    display: none;
+    opacity: 0%
+  }
+  50% {
+    display: block;
+    opacity: 0%
+  }
+  75% {
+    opacity: 50%
+  }
+  100% {
+    opacity: 100%
+  }
+}
+
+.fade-in {
+  animation: fade-in 2s linear forwards;
+}
+
